// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`code Empty code with backquote: toMatchSnapshotWhenParsing 1`] = `
Array [
  Object {
    "indent": 0,
    "nodes": Array [
      Object {
        "raw": "\`\`",
        "text": "",
        "type": "code",
      },
    ],
    "type": "line",
  },
]
`;

exports[`code Simple code with backquote: toMatchSnapshotWhenParsing 1`] = `
Array [
  Object {
    "indent": 0,
    "nodes": Array [
      Object {
        "raw": "\`Simple code\`",
        "text": "Simple code",
        "type": "code",
      },
    ],
    "type": "line",
  },
]
`;
